sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: type boolean
	 var swap : boolean=true
                    ^AlgBubbleSort1:10: error: not found: value getNombreValeur
	for (i<-0 to getNombreValeur()-2) {
                     ^