sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code



def bubbleSort() {
	 var swap : boolean=true
	while(swap) {
		swap=false
	
	for (i<-0 to getNombreValeur()-2) {
	 if (estPlusPetit(i+1, i)) {
	 	echange(i, i+1) 
	 	swap=true}
	 	
	 }
	} }